--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Mundialito NADRO</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" media="screen" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.0/css/bulma.css" />
+  
+  <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
+  <link rel="stylesheet" type="text/css" media="screen" href="https://cdn.materialdesignicons.com/1.2.65/css/materialdesignicons.min.css" />
+  <link rel="stylesheet" type="text/css" media="screen" href="https://fonts.googleapis.com/css?family=Play|Russo+One" />
   
 </head>
 <body>
@@ -33,30 +36,28 @@
               <a href="#" className="navbar-item">Media</a>
             </div>
           </div>
-          <a href="#" class="navbar-item is-disabled">DT Nadro</a>
-          <a href="#" class="navbar-item is-disabled">Álbum Mundialito</a>
+          <!--a href="#" class="navbar-item is-disabled">DT Nadro</a-->
+          <a href="#" class="navbar-item is-disabled">Galería</a>
           <a href="#" class="navbar-item">Contacto</a>
         </div>
       </div>
     </nav>
   </header>
-  <section class="hero">
+  <section class="hero is-dark">
     <div class="hero-body">
       <div class="container">
-        <!-- <h1 class="title">
-          Primary title
-        </h1>
-        <h2 class="subtitle">
+        <h1 class="title is-size-1">TORNEO</h1>
+        <!-- <h2 class="subtitle">
           Primary subtitle
         </h2> -->
       </div>
     </div>
   </section>
-  <section>
+  <section class="section">
     <div class="container">
       <div class="columns">
         <div class="column is-4">
-          <table>
+          <table class="table">
             <caption>Corporativo 1</caption>
             <tr>
               <td></td>
@@ -76,7 +77,7 @@
           </table>
         </div>
         <div class="column is-4">
-          <table>
+          <table class="table">
             <caption>Corporativo 1</caption>
             <tr>
               <td></td>
@@ -96,7 +97,7 @@
           </table>
         </div>
         <div class="column is-4">
-          <table>
+          <table class="table">
             <caption>Corporativo 2</caption>
             <tr>
               <td></td>
@@ -116,7 +117,7 @@
           </table>
         </div>
       </div>
-      <table>
+      <table class="table">
         <caption>Cancha 1</caption>
         <tr>
           <td>16:00</td>
@@ -143,11 +144,11 @@
     </div>
   </section>
   <footer class="has-text-centered">
-    <p>Mundialito Nadro 2018</p>
     <nav>
-      <a class="icon-facebook"></a>
-      <a class="icon-twitter"></a>
+      <a class="mdi mdi-facebook"></a>
+      <a class="mdi mdi-twitter"></a>
     </nav>
+    <p>Mundialito Nadro 2018</p>
   </footer>
 </body>
 </html>
